# ID-Card-Extractor-System

./: CHANGELOG.md  Makefile  README.md  pyproject.toml
src/idcard_extractor/: __init__.py
src/idcard_extractor/backend/: __init__.py
src/idcard_extractor/backend/api/: web_interface.py
src/idcard_extractor/backend/services/: csv_exporter.py  id_detector.py  image_processor.py  llm_extractor.py  processor.py
src/idcard_extractor/frontend/: cli_interface.py  streamlit_app.py
src/x_utils/: _cz_ch.py  pr_title.py  uv_up.py
